# aws-learning-model

./: .env  .gitignore  Chunks para RAG.ipynb  README.md  embedding.py  embedding_docs.py  main.py  pyproject.toml  train.py  train_example.py  usage.py
corpus/: corpus2.json  s3_qa_corpus.json
