[project]
name = "aws-learning-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "huggingface-hub[hf-xet]>=0.32.4",
    "protobuf>=6.31.1",
    "sentence-transformers>=5.0.0",
    "sentencepiece>=0.2.0",
    "transformers>=4.52.4",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
cu128 = [
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
rocm = [
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "pytorch-triton-rocm>=3.3.0"
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu128" },
        { extra = "rocm" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-rocm", extra = "rocm" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-rocm", extra = "rocm" },
]
pytorch-triton-rocm = [
  { index = "pytorch-rocm", extra = "rocm" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true
